--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ targetCompatibility = sourceCompatibility = compileJava.sourceCompatibility = co
 
 repositories {
     mavenCentral()
-    maven { url = 'https://files.minecraftforge.net/maven' }
+    maven { url = 'https://maven.minecraftforge.net' }
 }
 
 def gitVersion() {
@@ -128,12 +128,15 @@ publishing {
 	}
 	repositories {
 		maven {
-			if (project.hasProperty('forgeMavenPassword')) {
-				credentials {
-					username project.properties.forgeMavenUser
-					password project.properties.forgeMavenPassword
+			if (System.env.MAVEN_USER) {
+				url 'https://maven.minecraftforge.net/'
+				authentication {
+					basic(BasicAuthentication)
 				}
-				url 'https://files.minecraftforge.net/maven/manage/upload'
+				credentials {
+					username = System.env.MAVEN_USER ?: 'not'
+					password = System.env.MAVEN_PASSWORD ?: 'set'
+				}
 			} else {
 				url 'file://' + rootProject.file('repo').getAbsolutePath()
 			}
