--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,12 @@ license {
   newLine false
 }
 
+sourceSets {
+	cpwFML
+	forgeFML
+	forgeAPI
+}
+
 jar {
     manifest.attributes('Main-Class': 'net.minecraftforge.mergetool.ConsoleMerger')
     manifest.attributes('Implementation-Version': project.version)
@@ -48,24 +54,21 @@ shadowJar {
 task sourcesJar(type: Jar) {
     classifier = 'sources'
     from sourceSets.main.allSource
+	from sourceSets.cpwFML.allSource
+	from sourceSets.forgeFML.allSource
+	from sourceSets.forgeAPI.allSource
 }
 task cpwFML(type: Jar) {
     classifier 'cpw'
-    from (sourceSets.main.output) {
-        include 'cpw/mods/fml/relauncher/**'
-    }
+	from sourceSets.cpwFML.output
 }
 task forgeFML(type: Jar) {
     classifier 'forge'
-    from (sourceSets.main.output) {
-        include 'net/minecraftforge/fml/relauncher/**'
-    }
+	from sourceSets.forgeFML.output
 }
 task forgeAPI(type: Jar) {
     classifier 'api'
-    from (sourceSets.main.output) {
-        include 'net/minecraftforge/api/distmarker/**'
-    }
+	from sourceSets.forgeAPI.output
 }
 artifacts {
     archives jar
@@ -82,6 +85,10 @@ dependencies {
     implementation 'org.ow2.asm:asm-util:9.1'
     implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
     implementation 'net.minecraftforge:srgutils:0.2.12'
+
+	implementation sourceSets.cpwFML.output
+	implementation sourceSets.forgeFML.output
+	implementation sourceSets.forgeAPI.output
 }
 
 configurations { deployJars }
