--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'net.minecrell.licenser' version '0.4'
-    id 'org.ajoberstar.grgit' version '3.0.0'
-    id 'com.github.johnrengelman.shadow' version '2.0.4'
-    id 'com.github.ben-manes.versions' version '0.22.0'
+    id 'org.cadixdev.licenser' version '0.6.0'
+    id 'org.ajoberstar.grgit' version '4.1.0'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'com.github.ben-manes.versions' version '0.38.0'
 }
 
 apply plugin: 'java'
@@ -93,7 +93,6 @@ artifacts {
 publishing {
     publications.create("mavenJava", MavenPublication) {
         from components.java
-        artifact shadowJar
         artifact cpwFML
         artifact forgeFML
         artifact forgeAPI
