Include annotations in the non-shadow jar
This allows running mergetool via its API, as was possible
before ac071b725d90442294dbdca1d04167f2e8abbd8a

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ java {
 jar {
     manifest.attributes('Main-Class': 'net.minecraftforge.mergetool.ConsoleMerger')
     manifest.attributes('Implementation-Version': project.version)
+    from sourceSets.cpwFML.output
+    from sourceSets.forgeFML.output
+    from sourceSets.forgeAPI.output
 }
 shadowJar {
     classifier 'fatjar'
