--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,19 @@
 plugins {
-    id 'org.cadixdev.licenser' version '0.6.0'
-    id 'org.ajoberstar.grgit' version '4.1.0'
-    id 'com.github.johnrengelman.shadow' version '7.0.0'
-    id 'com.github.ben-manes.versions' version '0.38.0'
+    id 'java'
+    id 'eclipse'
+    id 'maven-publish'
+    id 'org.cadixdev.licenser' version '0.6.1'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'com.github.ben-manes.versions' version '0.42.0'
+    id 'net.minecraftforge.gradleutils' version '2.+'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
-
 group = 'net.minecraftforge'
-version = gitVersion()
+version = gradleutils.getTagOffsetVersion()
 
 repositories {
     mavenCentral()
     maven { url = 'https://maven.minecraftforge.net' }
-}
-
-def gitVersion() {
-    def raw = grgit.describe(longDescr: true, tags:true)
-    def desc = (raw == null ? '0.0-0-unknown' : grgit.describe(longDescr: true, tags:true)).split('-') as List
-    def hash = desc.remove(desc.size() - 1)
-    def offset = desc.remove(desc.size() - 1)
-    def tag = desc.join('-')
-    def branch = grgit.branch.current().name
-    if (tag.startsWith(branch))
-        branch = 'master'
-    return "${tag}.${offset}${t -> if (branch != 'master') t << '-' + branch}"
 }
 
 license {
@@ -75,11 +62,11 @@ task forgeAPI(type: Jar) {
 }
 
 dependencies {
-    implementation 'org.ow2.asm:asm:9.1'
-    implementation 'org.ow2.asm:asm-tree:9.1'
-    implementation 'org.ow2.asm:asm-util:9.1'
+    implementation 'org.ow2.asm:asm:9.2'
+    implementation 'org.ow2.asm:asm-tree:9.2'
+    implementation 'org.ow2.asm:asm-util:9.2'
     implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
-    implementation 'net.minecraftforge:srgutils:0.4.3'
+    implementation 'net.minecraftforge:srgutils:0.4.11'
 
     implementation sourceSets.cpwFML.output
     implementation sourceSets.forgeFML.output
@@ -130,19 +117,6 @@ publishing {
         }
     }
     repositories {
-        maven {
-            if (System.env.MAVEN_USER) {
-                url 'https://maven.minecraftforge.net/'
-                authentication {
-                    basic(BasicAuthentication)
-                }
-                credentials {
-                    username = System.env.MAVEN_USER ?: 'not'
-                    password = System.env.MAVEN_PASSWORD ?: 'set'
-                }
-            } else {
-                url 'file://' + rootProject.file('repo').getAbsolutePath()
-            }
-        }
+        maven gradleutils.getPublishingForgeMaven()
     }
 }
